Link CSS and JS files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <title>Bhutan Rental</title>
+
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+
   <h1>Bhutan Rental Website</h1>
   <p>Find or post houses easily</p>
+
+  <button>Find a House</button>
+  <button>Post a House</button>
+
+  <!-- Link JS -->
+  <script src="js/main.js"></script>
 </body>
 </html>
