Link home buttons to pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   <h1>Bhutan Rental Website</h1>
   <p>Find or post houses easily</p>
 
-  <button>Find a House</button>
-  <button>Post a House</button>
+  <a href="listings.html">
+    <button>Find a House</button>
+  </a>
+
+  <a href="post.html">
+    <button>Post a House</button>
+  </a>
 
   <!-- Link JS -->
   <script src="js/main.js"></script>
