Add form IDs for JS handling

--- a/post.html
+++ b/post.html
@@ -9,15 +9,15 @@
 
   <h1>Post a House</h1>
 
-  <form>
+  <form id="postForm">
     <label>Location</label><br />
-    <input type="text" placeholder="Thimphu, Phuentsholing..." /><br /><br />
+    <input type="text" id="location" placeholder="Thimphu, Phuentsholing..." /><br /><br />
 
     <label>Monthly Rent</label><br />
-    <input type="number" placeholder="Rent in BTN" /><br /><br />
+    <input type="number" id="rent" placeholder="Rent in BTN" /><br /><br />
 
     <label>Description</label><br />
-    <textarea placeholder="House details"></textarea><br /><br />
+    <textarea id="description" placeholder="House details"></textarea><br /><br />
 
     <button type="submit">Post</button>
   </form>
