Prepare listings container

--- a/listings.html
+++ b/listings.html
@@ -9,7 +9,7 @@
 
   <h1>Available Houses</h1>
 
-  <p>Houses for rent will appear here.</p>
+  <div id="listings"></div>
 
   <a href="index.html">← Back to Home</a>
 
