Improve homepage layout

--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
 </head>
 <body>
 
-  <h1>Bhutan Rental Website</h1>
-  <p>Find or post houses easily</p>
+  <header>
+  <div class="container">
+    <h1>Bhutan Rental</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="listings.html">Listings</a>
+      <a href="post.html">Post House</a>
+    </nav>
+  </div>
+  </header>
 
-  <a href="listings.html">
-    <button>Find a House</button>
-  </a>
+  <div class="container">
+   <div class="card">
+    <h2>Find or Post a House Easily</h2>
+    <p>
+      A simple platform to connect tenants and landlords across Bhutan.
+    </p>
 
-  <a href="post.html">
-    <button>Post a House</button>
-  </a>
+    <a href="listings.html">
+      <button>Find a House</button>
+    </a>
+
+    <a href="post.html">
+      <button>Post a House</button>
+    </a>
+   </div>
+  </div>
 
   <!-- Link JS -->
   <script src="js/main.js"></script>
