Improve listings page UI

--- a/listings.html
+++ b/listings.html
@@ -7,11 +7,21 @@
 </head>
 <body>
 
-  <h1>Available Houses</h1>
+  <header>
+  <div class="container">
+    <h1>Bhutan Rental</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="listings.html">Listings</a>
+      <a href="post.html">Post House</a>
+    </nav>
+  </div>
+  </header>
 
-  <div id="listings"></div>
-
-  <a href="index.html">← Back to Home</a>
+  <div class="container">
+    <h2>Available Houses</h2>
+    <div id="listings"></div>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
