--- a/post.html
+++ b/post.html
@@ -7,20 +7,39 @@
 </head>
 <body>
 
-  <h1>Post a House</h1>
+  <header>
+  <div class="container">
+    <h1>Bhutan Rental</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="listings.html">Listings</a>
+      <a href="post.html">Post House</a>
+    </nav>
+  </div>
+</header>
 
-  <form id="postForm">
-    <label>Location</label><br />
-    <input type="text" id="location" placeholder="Thimphu, Phuentsholing..." /><br /><br />
+<div class="container">
+  <div class="card">
+    <h2>Post a House</h2>
 
-    <label>Monthly Rent</label><br />
-    <input type="number" id="rent" placeholder="Rent in BTN" /><br /><br />
+    <form id="postForm">
+      <label>Location</label>
+      <input type="text" id="location" placeholder="Thimphu, Phuentsholing..." />
 
-    <label>Description</label><br />
-    <textarea id="description" placeholder="House details"></textarea><br /><br />
+      <label>Monthly Rent (BTN)</label>
+      <input type="number" id="rent" placeholder="Enter rent amount" />
 
-    <button type="submit">Post</button>
-  </form>
+      <label>Description</label>
+      <textarea
+        id="description"
+        rows="4"
+        placeholder="House details"
+      ></textarea>
+
+      <button type="submit">Post House</button>
+    </form>
+  </div>
+</div>
 
   <br />
   <a href="index.html">← Back to Home</a>
