--- a/post.html
+++ b/post.html
@@ -41,9 +41,15 @@
   </div>
 </div>
 
-  <br />
+    <br />
   <a href="index.html">← Back to Home</a>
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <!-- Main JS -->
   <script src="js/main.js"></script>
+
 </body>
 </html>
