--- a/listings.html
+++ b/listings.html
@@ -18,11 +18,16 @@
   </div>
   </header>
 
-  <div class="container">
+    <div class="container">
     <h2>Available Houses</h2>
     <div id="listings"></div>
   </div>
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <!-- Main JS -->
   <script src="js/main.js"></script>
 </body>
 </html>
