--- a/auth.html
+++ b/auth.html
@@ -27,8 +27,10 @@
       <input type="email" id="email" required />
 
       <label>Password</label>
-      <input type="password" id="password" required />
-
+      <input type="password" id="password" required autocomplete="off" />
+      <p style="font-size: 14px; color: #666;">
+       Password must be at least 6 characters.
+      </p>
       <button type="submit">Login / Sign Up</button>
     </form>
 
